# uselessd

./: .gitignore  BUILDING_AND_HACKING  CODING_STYLE  DISTRO_PORTING  JOURNALRMNOTES  JOURNALRMNOTES.txt  MUSLPORTINGNOTES  Makefile-man.am  Makefile.am  Makefile.in  NEWS  README  README.txt  TODO  UCLIBCPORTINGNOTES.txt  aclocal.m4  config.h.in  configure  configure.ac
docs/: INSTALL_INSTRUCTIONS_LINUX.txt
hwdb/: 20-OUI.hwdb  20-pci-vendor-model.hwdb
man/: SD_EMERG.3  SD_ERR.html  SD_ID128_CONST_STR.html  SD_ID128_FORMAT_STR.html  SD_LISTEN_FDS_START.3  SD_LISTEN_FDS_START.html  bootup.7  bootup.html  daemon.7  daemon.html  daemon.xml  halt.8  hostname.5  hostname.html  hostname.xml  index.html  init.1  kernel-command-line.7  kernel-command-line.html  kernel-command-line.xml  locale.conf.xml  localtime.5  localtime.html  localtime.xml  machine-id.5  machine-id.html  machine-id.xml  machine-info.xml  os-release.5  os-release.html  poweroff.html  reboot.8  reboot.html  runlevel.8  runlevel.html  runlevel.xml  sd-daemon.3  sd-daemon.html  sd-id128.3  sd_booted.3  (+162 more)
packaging/: uselessd.manifest  uselessd.spec
po/: POTFILES.in  pl.po
shell-completion/bash/: systemctl
src/analyze/: systemd-analyze.c
src/binfmt/: binfmt.c
src/cgls/: uselessd-cgls
src/cgroups-agent/: cgroups-agent.c
src/cgtop/: cgtop.c
src/core/: build.h  cgroup.c  cgroup.h  condition.c  condition.h  dbus-execute.c  dbus-manager.c  dbus.c  device.c  execute.c  execute.h  kmod-setup.c  load-dropin.c  load-fragment-gperf.gperf.m4  load-fragment.c  load-fragment.h  machine-id-setup.c  macros.systemd.in  main-minimal.c  main-no-init.c  main.c  manager.c  manager.h  mount-setup.c  mount-setup.h  mount.c  namespace.c  namespace.h  org.freedesktop.systemd1.policy.in.in  path.c  path.h  service.c  shutdown.c  sleep.conf  smack-setup.c  socket.c  socket.h  special.h  swap.c  switch-root.c  (+7 more)
src/delta/: delta.c
src/efi-boot-generator/: efi-boot-generator.c
src/fsck/: fsck.c
src/fstab-generator/: fstab-generator.c
src/getty-generator/: getty-generator.c
src/hostname-setup/: hostname-setup.c
src/initctl/: initctl.c
src/journal/: journal-send.c  journalctl.c  journald-kmsg.c  journald-server.c
src/libsystemd-daemon/: libsystemd-daemon.pc.in  libsystemd-daemon.sym  sd-daemon.c
src/libudev/: libudev.c
src/loopback-setup/: loopback-setup.c
src/machine-id-setup/: machine-id-setup-main.c
src/modules-load/: modules-load.c
src/notify/: notify.c
src/quotacheck/: quotacheck.c
src/random-seed/: random-seed.c
src/readahead/: readahead-collect.c
src/remount-fs/: remount-fs.c
src/reply-password/: reply-password.c
src/shared/: ask-password-api.c  cgroup-show.h  cgroup-util.c  conf-parser.c  dbus-common.c  efivars.c  env-util.c  exit-status.c  exit-status.h  fileio-label.c  hashmap.c  install.c  label.c  label.h  log.c  log.h  macro.h  missing.h  mkdir.c  path-util.c  printf.h  sleep-config.c  smack-util.c  smack-util.h  specifier.c  specifier.h  strbuf.h  strv.c  time-util.c  unit-name.c  unit-name.h  util.c  util.h  utmp-wtmp.c  utmp-wtmp.h  virt.c
src/shutdownd/: shutdownd.c
src/sleep/: sleep.c  uselessd-sleep
src/sysctl/: sysctl.c
src/systemctl/: systemctl.c
src/systemd/: sd-daemon.h  sd-messages.h
src/test/: test-async.c  test-fileio.c  test-install.c  test-log.c  test-set.c  test-sleep.c  test-tables.c  test-util.c
src/tmpfiles/: tmpfiles.c
src/tty-ask-password-agent/: tty-ask-password-agent.c
src/udev/: udevadm-hwdb.c
src/update-utmp/: update-utmp.c
src/vconsole/: vconsole-setup.c
tmpfiles.d/: systemd.conf
tools/: make-directive-index.py  make-man-index.py
units/: basic.target  emergency.service  emergency.service.in  hibernate.target  hybrid-sleep.target  rc-local.service.in  rescue.service.m4.in  serial-getty@.service.m4  suspend.target  swap.target  systemd-binfmt.service.in  systemd-fsck-root.service.in  systemd-fsck@.service.in  systemd-initctl.service.in  systemd-machine-id-setup.service.in  systemd-modules-load.service.in  systemd-sysctl.service.in  systemd-tmpfiles-clean.service.in  systemd-tmpfiles-setup.service.in  systemd-vconsole-setup.service.in  uselessd-hibernate.service.in  uselessd-hostname-setup.service.in  uselessd-hybrid-sleep.service.in  uselessd-loopback-setup.service.in  uselessd-suspend.service.in  user@.service.in
